--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "lodash": "^4.17.5",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-native": "^0.54.4",
