--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "lodash": "^4.17.5",
+    "minimist": "^1.2.0",
+    "node-lipsum": "^1.0.1",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-native": "^0.54.4",
