--- a/package.json
+++ b/package.json
@@ -53,12 +53,12 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "ethjs": "^0.3.6",
     "lodash": "^4.17.5",
     "minimist": "^1.2.0",
     "node-lipsum": "^1.0.1",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
-    "react-native": "^0.54.4",
     "react-popper": "^0.9.1",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
@@ -68,7 +68,8 @@
     "redux": "^3.7.2",
     "redux-auth-wrapper": "^1.0.0",
     "redux-saga": "^0.15.3",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "web3": "^1.0.0-beta.33"
   },
   "scripts": {
     "start": "node scripts/start.js",
